[package]
name = "tracie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serenity = "0.12.1"
surrealdb = { version = "1.3.1", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["macros","rt-multi-thread"] }
